# llm_escalation_evaluator

./: .gitignore  README.md  conversations.json  pyproject.toml  test.ipynb
src/llm_escalation_evaluator/: __init__.py  cli.py  config.py  data_types.py  exceptions.py  grader.py  grader_config.yaml  history.py  logging_utils.py  main.py  openai_client.py  prompt.py  schema.py  session.py  yaml_config.py
tests/: .~lock.conversations_Feb_01.csv#  .~lock.conversations_Feb_01_with_ground_truth.csv#  .~lock.evaluation_results_test_8.csv#  conversations_Feb_01.csv  conversations_Feb_01_with_ground_truth.csv  evaluation_results_test_1.csv  evaluation_results_test_2.csv  evaluation_results_test_8.csv  run_test_data.py
